--- a/pom.xml
+++ b/pom.xml
@@ -160,6 +160,12 @@
       <artifactId>product-reference</artifactId>
       <version>0.0.8</version>
     </dependency>
+    
+    <dependency>
+      <groupId>uk.gov.ons.ctp.integration.common</groupId>
+      <artifactId>census-int-case-api-client</artifactId>
+      <version>0.0.2</version>
+    </dependency>
     <!-- ONS END -->
 
     <!-- third party libraries -->
