Changed project name in various places. Added travis and docker file configs.

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -51,7 +51,7 @@ spring:
     ansi:
       enabled: never
   application:
-    name: ONS FakeCaseService
+    name: ONS CensusMockCaseApiService
 
 
 address-index-settings:
