--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
   <modelVersion>4.0.0</modelVersion>
-  <artifactId>fake-case-service</artifactId>
+  <artifactId>census-mock-case-api-service</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <packaging>jar</packaging>
 
@@ -13,8 +13,8 @@
     <version>0.0.8</version>
   </parent>
 
-  <name>Fake Case Service</name>
-  <description>Fake Case Service for local development</description>
+  <name>Census Mock Case API Service</name>
+  <description>Census Mock Case API Service for local development</description>
 
   <properties>
     <skip.integration.tests>true</skip.integration.tests>
@@ -251,7 +251,6 @@
       <scope>test</scope>
     </dependency>
 
-
   </dependencies>
 
   <build>
@@ -318,7 +317,7 @@
         <artifactId>spring-boot-maven-plugin</artifactId>
         <configuration>
           <executable>true</executable>
-          <mainClass>uk.gov.ons.ctp.integration.contactcentresvc.ContactCentreSvcApplication</mainClass>
+          <mainClass>uk.gov.ons.ctp.integration.mockcaseapiservice.MockCaseApiServiceApplication</mainClass>
         </configuration>
         <executions>
           <execution>
