CR-000 added extra case fixture for CCS testing

--- a/src/main/resources/questionnaires.yml
+++ b/src/main/resources/questionnaires.yml
@@ -7,5 +7,9 @@ questionnairedata:
     {
       "questionnaireId": "3305e937-6fb1-4ce1-9d4c-077f147789ac",
       "active": "true"
+    },
+    {
+      "questionnaireId": "03f58cb5-9af4-4d40-9d60-c124c5bddf09",
+      "active": "false"
     }
   ]'
