CR-632 tweaked deployment yml for concourse

--- a/kubernetes/mock-case-api-deployment.yml
+++ b/kubernetes/mock-case-api-deployment.yml
@@ -5,7 +5,7 @@ metadata:
   labels:
     app: mockcaseapi
 spec:
-  replicas: 1
+  replicas: [REPLICAS]
   strategy:
     rollingUpdate:
       maxSurge: 1
@@ -19,15 +19,15 @@ spec:
     spec:
       containers:
       - name: mockcaseapi
-        image: eu.gcr.io/census-int-ci/census-mock-case-api-service:latest
+        image: eu.gcr.io/census-gcr-int/census-mock-case-api-service:[CONTAINER_VERSION]
         imagePullPolicy: Always
         resources:
           requests:
-            cpu: "1000m"
-            memory: "2048Mi"
+            cpu: "[CPU_REQ]"
+            memory: "[MEM_REQ]"
           limits:
-            cpu: "1000m"
-            memory: "2048Mi"
+            cpu: "[CPU_MAX]"
+            memory: "[MEM_MAX]"
         readinessProbe:
           httpGet:
             path: /info
@@ -50,6 +50,7 @@ spec:
         env:
         - name: JAVA_TOOL_OPTIONS
           value: "-Dlogging.useJson=true
+            -Dspring.profiles.active=[ENV]
             -Dlogging.level.uk.gov.ons.ctp=DEBUG
             -Dlogging.level.org.springframework=WARN
             -Dendpoints.autoconfig.enabled=false-Dendpoints.beans.enabled=false
