CR-000 travis branch fix

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,10 +12,14 @@ before_install:
   - mvn fmt:check
 
 script:
+  - export BRANCH=$(if [ "$TRAVIS_PULL_REQUEST" == "false" ]; then echo $TRAVIS_BRANCH; else echo $TRAVIS_PULL_REQUEST_BRANCH; fi)
+  - echo "TRAVIS_BRANCH=$TRAVIS_BRANCH, PR=$PR, BRANCH=$BRANCH"
   - travis_wait mvn verify
 
 after_success:
-  - ./scripts/docker_push.sh
+  - if [ "$BRANCH" != "master" ]; then
+      ./scripts/docker_push.sh
+    fi
 
 cache:
   directories:
