CR-000 fix travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ script:
 
 after_success:
   - if [ "$BRANCH" != "master" ]; then
-      ./scripts/docker_push.sh
+      ./scripts/docker_push.sh;
     fi
 
 cache:
