--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,6 @@ language: java
 jdk: openjdk11
 
 before_install:
-  - cp .maven.settings.xml $HOME/.m2/settings.xml
   - mvn fmt:check
 
 script:
@@ -17,7 +16,7 @@ script:
   - travis_wait mvn verify
 
 after_success:
-  - if [ "$BRANCH" != "master" ]; then
+  - if [ "$TRAVIS_PULL_REQUEST" == "false" ]; then
       ./scripts/docker_push.sh;
     fi
 
