--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     <parent>
         <groupId>uk.gov.ons.ctp.integration</groupId>
         <artifactId>census-int-common-config</artifactId>
-        <version>0.0.14-SNAPSHOT</version>
+        <version>0.0.14</version>
     </parent>
 
     <name>Census Mock Case API Service</name>
@@ -152,7 +152,7 @@
         <dependency>
             <groupId>uk.gov.ons.ctp.integration</groupId>
             <artifactId>contactcentreserviceapi</artifactId>
-            <version>0.0.54-SNAPSHOT</version>
+            <version>0.0.54</version>
         </dependency>
 
         <dependency>
@@ -164,7 +164,7 @@
         <dependency>
             <groupId>uk.gov.ons.ctp.integration.common</groupId>
             <artifactId>census-int-case-api-client</artifactId>
-            <version>0.0.5-SNAPSHOT</version>
+            <version>0.0.5</version>
         </dependency>
         <!-- ONS END -->
 
