add addressType to each case in the cases.yml

--- a/src/main/resources/cases.yml
+++ b/src/main/resources/cases.yml
@@ -37,6 +37,7 @@ casedata:
         ],
        "id": "3305e937-6fb1-4ce1-9d4c-077f147789ac",
        "caseType": "HH",
+       "addressType": "HH",
        "region": "E",
        "collectionExerciseId": "49871667-117d-4a63-9101-f6a0660f73f6",
        "surveyType": "CENSUS",
@@ -79,6 +80,7 @@ casedata:
         ],
        "id": "3305e937-6fb1-4ce1-9d4c-077f147789ab",
        "caseType": "HH",
+       "addressType": "HH",
        "region": "E",
        "collectionExerciseId": "49871667-117d-4a63-9101-f6a0660f73f6",
        "surveyType": "CENSUS",
@@ -108,6 +110,7 @@ casedata:
        "caseEvents": [],
        "id": "03f58cb5-9af4-4d40-9d60-c124c5bddf09",
        "caseType": "HH",
+       "addressType": "HH",
        "region": "E",
        "collectionExerciseId": "49871667-117d-4a63-9101-f6a0660f73f6",
        "surveyType": "CCS",
