CR-907 demo data

--- a/src/main/resources/cases.yml
+++ b/src/main/resources/cases.yml
@@ -119,5 +119,67 @@ casedata:
        "collectionExerciseId": "49871667-117d-4a63-9101-f6a0660f73f6",
        "surveyType": "CCS",
        "handDelivery": false
+     },
+     {
+       "caseRef": "124124",
+       "arid": "2344266233",
+       "estabArid": "AABBCC",
+       "estabType": "ET",
+       "uprn": "1347459999",
+       "createdDateTime": "2019-04-14T13:45:26.564+01:00",
+       "addressLine1": "Napier House",
+       "addressLine2": "88 Harbour Street",
+       "addressLine3": "Parkhead",
+       "townName": "Glasgow",
+       "postcode": "G1 2AA",
+       "organisationName": "ON",
+       "addressLevel": "E",
+       "abpCode": "AACC",
+       "latitude": "41.40338",
+       "longitude": "2.17403",
+       "oa": "EE22",
+       "lsoa": "x1",
+       "msoa": "x2",
+       "lad": "H1",
+       "secureEstablishment": false,
+       "caseEvents": [],
+       "id": "5a54ee1f-3552-4a46-adcc-0940f0998f90",
+       "caseType": "CE",
+       "addressType": "HH",
+       "region": "N",
+       "collectionExerciseId": "49871667-117d-4a63-9101-f6a0660f73f6",
+       "surveyType": "CCS",
+       "handDelivery": false
+     },
+     {
+       "caseRef": "124124",
+       "arid": "2344266233",
+       "estabArid": "AABBCC",
+       "estabType": "ET",
+       "uprn": "1347459999",
+       "createdDateTime": "2019-04-14T13:45:26.564+01:00",
+       "addressLine1": "Napier House",
+       "addressLine2": "88 Harbour Street",
+       "addressLine3": "Parkhead",
+       "townName": "Glasgow",
+       "postcode": "G1 2AA",
+       "organisationName": "ON",
+       "addressLevel": "U",
+       "abpCode": "AACC",
+       "latitude": "41.40338",
+       "longitude": "2.17403",
+       "oa": "EE22",
+       "lsoa": "x1",
+       "msoa": "x2",
+       "lad": "H1",
+       "secureEstablishment": false,
+       "caseEvents": [],
+       "id": "77346443-64ae-422e-9b93-d5250f48a27a",
+       "caseType": "CE",
+       "addressType": "HH",
+       "region": "W",
+       "collectionExerciseId": "49871667-117d-4a63-9101-f6a0660f73f6",
+       "surveyType": "CCS",
+       "handDelivery": false
      }
      ]'
