--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     <parent>
         <groupId>uk.gov.ons.ctp.integration</groupId>
         <artifactId>census-int-common-config</artifactId>
-        <version>0.0.14</version>
+        <version>0.0.15-SNAPSHOT</version>
     </parent>
 
     <name>Census Mock Case API Service</name>
@@ -106,21 +106,14 @@
         </dependency>
 
         <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-spring-service-connector</artifactId>
-        </dependency>
-
-        <dependency>
             <groupId>org.hamcrest</groupId>
             <artifactId>hamcrest</artifactId>
-            <version>2.1</version>
             <scope>test</scope>
         </dependency>
 
         <dependency>
             <groupId>com.squareup.okhttp3</groupId>
             <artifactId>mockwebserver</artifactId>
-            <version>3.14.2</version>
             <scope>test</scope>
         </dependency>
 
@@ -139,26 +132,26 @@
         <dependency>
             <groupId>uk.gov.ons.ctp.integration.common</groupId>
             <artifactId>framework</artifactId>
-            <version>0.0.52</version>
+            <version>0.0.57-SNAPSHOT</version>
         </dependency>
 
         <dependency>
             <groupId>uk.gov.ons.ctp.integration.common</groupId>
             <artifactId>test-framework</artifactId>
-            <version>0.0.11</version>
+            <version>0.0.14-SNAPSHOT</version>
             <scope>test</scope>
         </dependency>
 
         <dependency>
             <groupId>uk.gov.ons.ctp.integration.common</groupId>
             <artifactId>product-reference</artifactId>
-            <version>0.0.21</version>
+            <version>1.0.5-SNAPSHOT</version>
         </dependency>
 
         <dependency>
             <groupId>uk.gov.ons.ctp.integration.common</groupId>
             <artifactId>census-int-case-api-client</artifactId>
-            <version>0.0.12</version>
+            <version>0.0.13-SNAPSHOT</version>
         </dependency>
         <!-- ONS END -->
 
@@ -256,13 +249,11 @@
         <dependency>
             <groupId>io.springfox</groupId>
             <artifactId>springfox-swagger2</artifactId>
-            <version>2.9.2</version>
         </dependency>
 
         <dependency>
             <groupId>io.springfox</groupId>
             <artifactId>springfox-swagger-ui</artifactId>
-            <version>2.9.2</version>
         </dependency>
 
     </dependencies>
