--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <modelVersion>4.0.0</modelVersion>
     <artifactId>census-mock-case-api-service</artifactId>
-    <version>0.0.1-SNAPSHOT-CR997</version>
+    <version>0.0.1-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <parent>
@@ -124,13 +124,13 @@
         <dependency>
             <groupId>uk.gov.ons.ctp.integration.common</groupId>
             <artifactId>framework</artifactId>
-            <version>0.0.57</version>
+            <version>0.0.62</version>
         </dependency>
 
         <dependency>
             <groupId>uk.gov.ons.ctp.integration.common</groupId>
             <artifactId>test-framework</artifactId>
-            <version>0.0.14</version>
+            <version>0.0.17</version>
             <scope>test</scope>
         </dependency>
 
@@ -143,7 +143,7 @@
         <dependency>
             <groupId>uk.gov.ons.ctp.integration.common</groupId>
             <artifactId>census-int-case-api-client</artifactId>
-            <version>0.0.17-SNAPSHOT-CR997</version>
+            <version>0.0.17</version>
         </dependency>
         <!-- ONS END -->
 
