--- a/pom.xml
+++ b/pom.xml
@@ -4,13 +4,13 @@
 
   <modelVersion>4.0.0</modelVersion>
   <artifactId>census-mock-case-api-service</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
+  <version>0.0.1-CR1673-SNAPSHOT</version>
   <packaging>jar</packaging>
 
   <parent>
     <groupId>uk.gov.ons.ctp.integration</groupId>
     <artifactId>census-int-common-config</artifactId>
-    <version>0.0.15</version>
+    <version>0.0.17</version>
   </parent>
 
   <name>Census Mock Case API Service</name>
@@ -124,26 +124,26 @@
     <dependency>
       <groupId>uk.gov.ons.ctp.integration.common</groupId>
       <artifactId>framework</artifactId>
-      <version>0.0.64</version>
+      <version>0.0.74-CR1673-SNAPSHOT</version>
     </dependency>
 
     <dependency>
       <groupId>uk.gov.ons.ctp.integration.common</groupId>
       <artifactId>test-framework</artifactId>
-      <version>0.0.17</version>
+      <version>0.0.18-CR1673-SNAPSHOT</version>
       <scope>test</scope>
     </dependency>
 
     <dependency>
       <groupId>uk.gov.ons.ctp.integration.common</groupId>
       <artifactId>product-reference</artifactId>
-      <version>1.0.8</version>
+      <version>1.0.12-CR1673-SNAPSHOT</version>
     </dependency>
 
     <dependency>
       <groupId>uk.gov.ons.ctp.integration.common</groupId>
       <artifactId>census-int-case-api-client</artifactId>
-      <version>0.0.17</version>
+      <version>0.0.20-CR1673-SNAPSHOT</version>
     </dependency>
     <!-- ONS END -->
 
