--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
   <modelVersion>4.0.0</modelVersion>
   <artifactId>census-mock-case-api-service</artifactId>
-  <version>0.0.1-CR1673-SNAPSHOT</version>
+  <version>0.0.1-SNAPSHOT</version>
   <packaging>jar</packaging>
 
   <parent>
@@ -124,26 +124,26 @@
     <dependency>
       <groupId>uk.gov.ons.ctp.integration.common</groupId>
       <artifactId>framework</artifactId>
-      <version>0.0.74-CR1673-SNAPSHOT</version>
+      <version>0.0.73</version>
     </dependency>
 
     <dependency>
       <groupId>uk.gov.ons.ctp.integration.common</groupId>
       <artifactId>test-framework</artifactId>
-      <version>0.0.18-CR1673-SNAPSHOT</version>
+      <version>0.0.18</version>
       <scope>test</scope>
     </dependency>
 
     <dependency>
       <groupId>uk.gov.ons.ctp.integration.common</groupId>
       <artifactId>product-reference</artifactId>
-      <version>1.0.12-CR1673-SNAPSHOT</version>
+      <version>1.0.12</version>
     </dependency>
 
     <dependency>
       <groupId>uk.gov.ons.ctp.integration.common</groupId>
       <artifactId>census-int-case-api-client</artifactId>
-      <version>0.0.20-CR1673-SNAPSHOT</version>
+      <version>0.0.20</version>
     </dependency>
     <!-- ONS END -->
 
